# masters-with-agents

./: TODO.md  pyproject.toml
incontext/: TODOs.md  __init__.py  agents.py  auth.py  db.py  master_agents.py  master_lists.py  masters.py  schema.sql
incontext/static/: styles.css
incontext/templates/: base.html
incontext/templates/agents/: index.html  new_tethered.html
incontext/templates/master-agents/: edit.html  index.html  new.html  view.html
incontext/templates/masters/: edit.html  index.html  new.html  view.html
incontext/templates/masters/details/: edit.html  new.html
incontext/templates/masters/items/: edit.html  new.html  view.html
tests/: TODO.md  conftest.py  data.sql  test_agents.py  test_db.py  test_master_agents.py  test_master_lists.py  test_masters.py  test_tethered_agents.py
